# brv

./: CLAUDE.md  Cargo.toml  README.md
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
benches/: config_loading.rs  conflict_check.rs  expansion.rs
benchmarks/comparison/: bench.zsh
examples/: abbrs.toml  brv.toml  kort.toml
shells/zsh/: abbrs.zsh  brv.zsh  kort.zsh
src/: add.rs  cache.rs  compiler.rs  config.rs  conflict.rs  context.rs  expand.rs  history.rs  import.rs  lib.rs  main.rs  manage.rs  matcher.rs  output.rs  placeholder.rs  serve.rs
tests/: cli_test.rs  compile_test.rs  expand_test.rs  serve_test.rs
