[package]
name = "abbrs"
version = "0.2.2"
edition = "2021"
authors = ["ushironoko"]
description = "Fast and safe abbreviation expansion for zsh"
license = "MIT"
repository = "https://github.com/ushironoko/abbrs"
readme = "README.md"
keywords = ["zsh", "abbreviation", "shell", "cli"]
categories = ["command-line-utilities"]
rust-version = "1.80"
include = ["src/", "shells/", "README.md", "LICENSE"]

[[bin]]
name = "abbrs"
path = "src/main.rs"

[lib]
name = "abbrs"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"
regex = "1.11.1"
anyhow = "1.0.100"
rustc-hash = "2.1.1"
bitcode = { version = "0.6.9", features = ["serde"] }
xdg = "2.5.2"
libc = "0.2.183"
crossterm = "0.28.1"
toml_edit = "0.22.26"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = { version = "1.46.3", features = ["toml"] }
assert_cmd = "2.1.2"
predicates = "3.1.3"
proptest = "1.6.0"
tempfile = "3.24.0"

[[bench]]
name = "expansion"
harness = false

[[bench]]
name = "config_loading"
harness = false

[[bench]]
name = "conflict_check"
harness = false

[profile.release]
strip = true
lto = "thin"
opt-level = 3
codegen-units = 1
